Remove unused jvm-opts in project.clj